<resources>
    <string name="app_name">Birthify</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign in</string>
    <string name="or_string">or</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="register_new_account">Register your new account</string>
    <string name="login_string1">The best app to remember birthdays </string>
    <string name="login_to_account">Login to your account</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="forgot_password_settings">Forgot Password</string>
    <string name="dont_have_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="name">Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="enter_e_mail">Please enter your e-mail to reset password</string>
    <string name="reset_password">Reset Password</string>
    <string name="password">Password</string>
    <string name="save_birthday">Save Birthday</string>
    <string name="update_birthday">Update Birthday</string>
    <string name="delete_birthday">Delete Birthday</string>
    <string name="celebration_note">Note</string>
    <string name="birthday_date">Birthday Date</string>
    <string name="remembered_password">Remembered your password ?</string>
    <string name="record_birthday">Record the birthday</string>
    <string name="edit_birthday">Edit the birthday</string>
    <string name="birthdays">Birthdays</string>
    <string name="deleted_birthdays">Deleted Birthdays</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="birthday_detail">Birthday Detail</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="trash_bin">Trash Bin</string>
    <string name="account_menu">Account Menu</string>
    <string name="search">Search</string>
    <string name="add_a_birthday_of_your_dear_one">Click "+"\nTo Add a Birthday of\nYour Dear One</string>
    <string name="trash_bin_main_textView">There is no deleted birthdays</string>
    <string name="re_save_birthday">Re Save Birthday</string>
    <string name="delete_permanently">Delete Permanently</string>
    <string name="continue_without_signing_in">Continue without signing in</string>
    <string name="sort_options">Sorting\nOptions</string>
    <string name="sort_by_name_asc">Sort by Name (Asc)</string>
    <string name="sort_by_recorded_date_asc">Sort by Recorded Date (Asc)</string>
    <string name="sort_by_birth_date_asc">Sort by Birth Date (Asc)</string>
    <string name="sort_by_name_dsc">Sort by Name Dsc)</string>
    <string name="sort_by_recorded_date_dsc">Sort by Recorded Date (Dsc)</string>
    <string name="sort_by_birth_date_dsc">Sort by Birth Date (Dsc)</string>
    <string name="back_button">Back Button</string>
    <string name="edit">Edit</string>
    <string name="add_a_new_birthday">Add A New Birthday</string>
    <string name="toolbar_menu_three_lines">Toolbar Menu Three Lines</string>
    <string name="past_birthdays">Past Birthdays</string>
    <string name="item_birthday_name">Emrullah Akturk</string>
    <string name="card_view_icon">Card View Icon</string>
    <string name="card_view_edit_icon">Card View Edit Icon</string>
    <string name="item_birthday_birth_date">Birth Date</string>
    <string name="item_birthday_note">Note</string>
    <string name="notifications">Notifications</string>
    <string name="dark_theme">Dark theme</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="delete">Delete</string>
    <string name="delete_all_birthdays">Clear all birthdays</string>
    <string name="location_access">Location access</string>
    <string name="language">Language</string>
    <string name="help_center">Help Center</string>
    <string name="account_details">Account Details</string>
    <string name="about_us">About Us</string>
    <string name="change_password">Change Password</string>
    <string name="archive_my_birthdays">Archive my birthdays</string>
    <string name="reload_my_archived_birthdays">Reload my archived birthdays</string>
    <string name="current_password">Current Password:</string>
    <string name="new_password">New Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="there_is_no_past_birthdays">There is no past birthdays</string>
    <string name="send_reset_e_mail">Send Reset E-mail</string>
    <string name="notification_time">Notification Time</string>
    <string name="necessary_permission">You need to grant the necessary permissions for the application to work properly and send you notifications.</string>
    <string name="confirm_deletion_all_birthdays_title">Confirm Deletion All Birthdays</string>
    <string name="confirm_deletion_all_birthdays">Are you sure you want to delete your birthdays? This operation cannot be undone.s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_deletion_account">Are you sure you want to delete your account permanently? This operation cannot be undone.</string>
    <string name="confirm_deletion_account_title">Confirm Deletion Your Account</string>
    <string name="reset_password_title_alert">Reset Password"</string>
    <string name="reset_password_alert">Password reset informations will send to your e-mail</string>
    <string name="reset_password_snackbar">Reset e-mail successfully sent"</string>
    <string name="support_email_snackbar">There isn\'t any e-mail app on your device</string>
    <string name="select_language_title">Select Language</string>
    <string name="invalid_email_adress">Invalid email address</string>
    <string name="password_error">Password must be min 6, max 12 characters; include an uppercase letter, a number, and a special character</string>
    <string name="name_error">Full Name must be at least two words, without punctuation or numbers. Every words must contain at least 2 letter</string>
    <string name="logged_another_device">Logged in from another device. Logging out</string>
    <string name="changed_password_snackbar">You successfully changed your password.</string>
    <string name="enter_password_snackbar">Please enter a valid password.</string>
    <string name="password_does_not_match_snackbar">Your password does not match.</string>
    <string name="fill_in_all_fields">Please fill in all fields.</string>
    <string name="confirm_operation_title">Confirm Operation</string>
    <string name="confirm_operation">Are you sure you want to do this operation?</string>
    <string name="successfully_logged_in">You successfully logged in</string>
    <string name="confirm_synchronization_title">Confirm Synchronizatio</string>
    <string name="confirm_synchronization">Do you want to sync your birthdays with your new account? Otherwise your birthdays will be deleted</string>
    <string name="registration_successful">Registration successful</string>
    <string name="fill_in_fields_correctly">Please correctly fill in all fields</string>
    <string name="password_reset_mail_successful">Password reset email sent successfully</string>
    <string name="please_enter_a_valid_email">Please enter a valid email address</string>
    <string name="connection_error_title">Connection Error</string>
    <string name="connection_error">Your internet connection is lost. Your birthdays will not be saved in the database without an internet connection. Please check your internet connection..</string>
    <string name="ok">OK</string>
    <string name="on_the_day">On the day</string>
    <string name="_1_day_before">1 day ago</string>
    <string name="_1_week_before">1 week ago</string>
    <string name="_1_hour_before">1 month ago</string>
    <string name="frequently_asked_questions">FAQs</string>
    <string name="privacy_amp_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="what_is_birthify">What is Birthify ?</string>
    <string name="_1_how_do_i_add_a_new_birthday" translatable="false">1. How do I add a new birthday?</string>
    <string name="to_add_a_new_birthday_simply_navigate_to_the_add_birthday_screen_enter_the_name_and_date_and_choose_when_you_d_like_to_be_reminded_then_click_save" translatable="false">To add a new birthday, simply navigate to the \'Add Birthday\' screen, enter the name and date, and choose when you\'d like to be reminded. Then, click \'Save\'.</string>
    <string name="_2_how_can_i_set_a_reminder_for_a_birthday" translatable="false">2. How can I set a reminder for a birthday?</string>
    <string name="while_adding_or_editing_a_birthday_you_can_choose_when_you_want_to_receive_a_reminder_e_g_one_day_before_one_week_before_etc_the_reminder_will_be_sent_to_your_device_based_on_the_selected_date_and_time" translatable="false">While adding or editing a birthday, you can choose when you want to receive a reminder (e.g., one day before, one week before, etc.). The reminder will be sent to your device based on the selected date and time.</string>
    <string name="_3_what_happens_if_i_log_in_on_a_new_device" translatable="false">3. What happens if I log in on a new device?</string>
    <string name="if_you_log_in_on_a_new_device_all_your_saved_birthdays_will_be_synced_from_firebase_any_reminders_you_set_will_be_reconfigured_on_the_new_device_automatically" translatable="false">If you log in on a new device, all your saved birthdays will be synced from Firebase. Any reminders you set will be reconfigured on the new device automatically.</string>
    <string name="_4_can_i_use_the_app_without_creating_an_account" translatable="false">4. Can I use the app without creating an account?</string>
    <string name="yes_you_can_use_the_app_as_a_guest_however_your_data_will_only_be_saved_on_your_device_and_not_synced_with_firebase_if_you_create_an_account_later_your_local_data_will_be_merged_with_the_cloud" translatable="false">Yes, you can use the app as a guest. However, your data will only be saved on your device and not synced with Firebase. If you create an account later, your local data will be merged with the cloud.</string>
    <string name="_5_how_do_i_delete_a_birthday" translatable="false">5. How do I delete a birthday?</string>
    <string name="to_delete_a_birthday_go_to_the_edit_birthday_screen_scroll_down_and_click_on_the_delete_button_you_will_be_asked_to_confirm_before_the_birthday_is_permanently_removed" translatable="false">To delete a birthday, go to the \'Edit Birthday\' screen, scroll down, and click on the \'Delete\' button. You will be asked to confirm before the birthday is permanently removed.</string>
    <string name="_6_how_do_i_contact_support" translatable="false">6. How do I contact support?</string>
    <string name="if_you_need_further_assistance_you_can_contact_us_via_the_help_center_in_the_app_just_click_on_the_contact_us_button_and_it_will_open_your_email_client_with_our_support_email_pre_filled" translatable="false">If you need further assistance, you can contact us via the \'Help Center\' in the app. Just click on the \'Contact Us\' button, and it will open your email client with our support email pre-filled.</string>
    <string name="back">Back</string>
    <string name="card_background_image">card_background_image</string>
    <string name="close_btn">Close Btn</string>
</resources>