<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="@string/app_name">

        <menu>
            <item
                android:id="@+id/labelBirthdays"
                android:icon="@drawable/ic_cake"
                android:title="@string/birthdays" />
            <item
                android:id="@+id/labelPastBirthdays"
                android:icon="@drawable/ic_clock"
                android:title="@string/past_birthdays" />


            <item
                android:id="@+id/labelTrashBin"
                android:icon="@drawable/ic_delete"
                android:title="@string/trash_bin" />

            <item
                android:id="@+id/labelSettings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/labelLogin"
                android:icon="@drawable/ic_account"
                android:title="@string/login" />

        </menu>
    </item>
</menu>
