<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/birthdayCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="8dp"
    card_view:cardBackgroundColor="#FFFFFF">

    <ImageView
        android:id="@+id/card_background_image"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:scaleType="centerCrop"
        android:src="@drawable/item_background_gradient"
        android:contentDescription="@string/card_background_image" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="vertical"
        android:padding="16dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="61dp">


        <TextView
            android:id="@+id/noteCardTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_birthday_note"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameCardTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/wittgenstein_font"
            android:text="@string/item_birthday_name"
            android:textColor="@color/item_main_birthday_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/birthdayDateCardTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/wittgenstein_font"
            android:text="@string/birthday_date"
            android:textColor="@color/item_main_birthday_date"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/nameCardTv" />


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/card_view_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cake_bottom" />

        <ImageView
            android:id="@+id/editBirthdayButtonMainPage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="7dp"
            android:clickable="true"
            android:contentDescription="@string/card_view_edit_icon"
            android:focusable="true"
            android:fontFamily="@font/wittgenstein_font"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@drawable/ic_edit" />

        <!--        <TextView-->
<!--            android:id="@+id/textView8"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="7dp"-->
<!--            android:layout_marginEnd="7dp"-->
<!--            android:fontFamily="@font/wittgenstein_font"-->
<!--            android:text="@string/edit"-->
<!--            android:textColor="@color/item_main_birthday_edit"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/editBirthdayButtonMainPage"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>

